<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/blue"
    tools:context=".Login_Activity">
    <ImageView
        android:id="@+id/login_activity_varification_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="27dp"
        android:layout_below="@id/card_login_us_pas"
        android:src="@drawable/taxi_fingerprint_verification"
        android:layout_above="@id/card_login_us_pas"
        android:contentDescription="@string/img_desc"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_login_us_pas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        app:cardCornerRadius="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_margin="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_margin="20dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:src="@drawable/username_logo"
                    android:contentDescription="@string/username_logo" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:src="@drawable/lock_log"
                    android:contentDescription="@string/password_logo" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/login_activity_sign_in_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:text="@string/sign_in"
                    android:paddingStart="70dp"
                    android:paddingEnd="70dp"
                    android:textSize="20sp"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/login_activity_forgot_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/login_activity_create_ac_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>