<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:padding="20dp"
    tools:context=".Next_Of_Main_Activity">

    <ImageView
        android:id="@+id/next_of_main_activity_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/finance_ai_logo"
        android:contentDescription="@string/finance_ai_logo" />

    <TextView
        android:id="@+id/next_of_main_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_of_main_activity_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_below="@id/next_of_main_activity_img"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/next_of_main_activity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_of_main_activity_tex"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/next_of_main_activity_getstarted_btn"
        android:layout_below="@id/next_of_main_activity_title"
        android:layout_alignParentStart="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_of_main_activity_getstarted_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textStyle="bold"
        android:textSize="22sp"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:background="@drawable/button_background_white"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/next_of_main_activity_skip_btn"
        android:layout_alignParentStart="true"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_of_main_activity_skip_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_background_white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>