<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/group_work_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group_work_png"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="30dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_work_img"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            >
            <TextView
                android:id="@+id/app_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_title_textview"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_above="@id/main_activity_btn_linearlayout"
                >


            <TextView
                android:id="@+id/main_activity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/main_activity_text"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />
            </ScrollView>

            <LinearLayout
                android:id="@+id/main_activity_btn_linearlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_background_blue"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="2dp"
                android:layout_marginBottom="50dp"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/main_activity_conferm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conferm_here"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@color/blue"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>